# cameratracking-2019

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  distortion.xml  make_from_scratch.sh  my_test  outvideo.avi  startup_run.sh  to_jetson.sh
src/: main.cpp
src/cli/: flag_interpreter.cpp  flag_interpreter.hpp
src/network/: network.cpp  network.hpp
src/serialization/: serialization.hpp
src/string_manip/: sprintf.hpp  string_manip.hpp
test_vids/: 10deg_40dist_11x.avi  difficult_short.avi  distance_meter_inc.avi  new.avi  new_real.avi
